<resources>
    <string name="facebook_app_id">691330444282700</string>
    <string name="app_name">popiin</string>
    <string name="default_notification_channel_id">popiin</string>
    <string name="str_hello">Hi Hello</string>
    <string name="txt_onboarding">popiin offers people an easy, relatively stress-free way to search and discover venues to go out.</string>
    <string name="txt_get_started">Get Started</string>
    <string name="txt_come_in">Come in</string>
    <string name="txt_create_your_account">Create Your Account</string>
    <string name="txt_full_name">Full Name</string>
    <string name="txt_email_address">Email Address</string>
    <string name="txt_email">Email</string>
    <string name="txt_title">Title</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_date_of_birth">Date of birth</string>
    <string name="txt_password">Password</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="txt_enter_password">Enter Password</string>
    <string name="txt_enter_full_name">Enter Full Name</string>
    <string name="txt_enter_email">Enter Email</string>
    <string name="txt_enter_title">Enter title</string>
    <string name="txt_create_account">Create Account</string>
    <string name="txt_don_t_have_an_account">Don’t have an account?</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_login">Login</string>
    <string name="txt_already_have_an_account">Already have an account?</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_log_in">Log In</string>
    <string name="txt_reset_pass_desc">A unique code was sent to your email.</string>
    <string name="txt_reset_password">Reset Password</string>
    <string name="txt_resend_code">Resend Code</string>
    <string name="txt_code_not_received">Code not received?</string>
    <string name="txt_err_enter_email">Please enter email</string>
    <string name="txt_err_valid_email">Please enter valid email</string>
    <string name="txt_err_enter_name">Please enter name</string>
    <string name="txt_err_enter_first_name">Please enter first name</string>
    <string name="txt_err_enter_last_name">Please enter last name</string>
    <string name="txt_err_enter_password">Please enter your password.</string>
    <string name="txt_err_enter_conf_password">Please enter Confirm password</string>
    <string name="txt_err_match_conf_password">Passwords don\'t match. Please try again.</string>
    <string name="txt_err_select_gender">Please select Gender</string>
    <string name="txt_err_enter_dob">Please enter Date of Birth</string>
    <string name="txt_err_valid_otp">Please enter valid otp</string>
    <string name="txt_done">Done</string>
    <string name="txt_menu_settings">Settings</string>
    <string name="txt_menu_favourites">Favourites</string>
    <string name="txt_menu_location">Location</string>
    <string name="txt_menu_events">What\'s on</string>
    <string name="txt_menu_explore">Explore</string>
    <string name="txt_your_location">Your Location</string>
    <string name="txt_hey">Hey,</string>
    <string name="txt_search_nightclubs_amp_bars"><![CDATA[Search by title, music, address]]></string>
    <string name="text_wahtson_search">Search by title</string>
    <string name="txt_trending_stories">Trending Stories 🔥</string>
    <string name="txt_view_all">View All</string>
    <string name="txt_book_now">Book Now</string>
    <string name="txt_open_now">Open</string>
    <string name="txt_open">open</string>
    <string name="txt_hours_may_vary">Hours may vary</string>
    <string name="txt_temp_map_address">141 highway street, Shoreditch - London</string>
    <string name="txt_temp_category">Bar, Restaurants, Pub, Hotel</string>
    <string name="txt_description">Description</string>
    <string name="txt_enter_description">Enter description</string>
    <string name="txt_read_more">Read More</string>
    <string name="txt_hide">Hide</string>
    <string name="txt_amen_feature">Amenities &amp; Features</string>
    <string name="txt_menu">Menu</string>
    <string name="txt_reservation">Reservations</string>
    <string name="txt_venue_reservation">Reservation</string>
    <string name="txt_venue_reservation_title">Venue Reservation</string>
    <string name="txt_offers">Offers</string>
    <string name="txt_trending">Trending</string>
    <string name="txt_trending_day">Trending Days</string>
    <string name="txt_offers_preview">Offer Preview</string>
    <string name="txt_whats_on">What\'s on</string>
    <string name="txt_story">Story</string>
    <string name="txt_whats_on_camel">What\'s On</string>
    <string name="txt_whats_on_preview">What’s on Preview</string>
    <string name="txt_open_close_hour">Opening &amp; closing hours</string>
    <string name="txt_opening_hours">Opening hours</string>
    <string name="txt_opening_hours_caps">Opening Hours</string>
    <string name="txt_open_close_hour_camel">Opening &amp; Closing Hour</string>
    <string name="txt_open_close_hours">Opening &amp; Closing Hours</string>
    <string name="txt_bar_menu_img">Menu</string>
    <string name="txt_bar_menu_pdf">Menu</string>
    <string name="txt_table">Table</string>
    <string name="txt_guest_list">Guest list</string>
    <string name="txt_tickets">Tickets</string>
    <string name="txt_queue_jump">Queue Jump</string>
    <string name="txt_temp_offer_1">10% Off every friday night on vodkas</string>
    <string name="txt_temp_offer_2">10% Off every monday morning on coffess</string>
    <string name="txt_activate">Activate</string>
    <string name="txt_temp_time">09:00am - 03:00am</string>
    <string name="txt_monday">Monday</string>
    <string name="txt_tuesday">Tuesday</string>
    <string name="txt_wednesday">Wednesday</string>
    <string name="txt_thursday">Thursday</string>
    <string name="txt_friday">Friday</string>
    <string name="txt_saturday">Saturday</string>
    <string name="txt_sunday">Sunday</string>
    <string name="txt_desc_details">Cirque Le Soir Bar is typically considered a high-end venue that offers a luxurious and high-end venue that offers Cirque Le Soir Bar is typically considered a high-end venue that offers a luxurious and high-end venue</string>
    <string name="txt_view_more">View More</string>
    <string name="txt_of">of</string>
    <string name="txt_edit_reservation">Edit Reservation</string>
    <string name="txt_venue_reserve_confirm">Venue confirmation required</string>
    <string name="txt_venue_reserve_desc">When this is turned on, you will receive alerts to confirm bookings</string>
    <string name="txt_booking_options">Booking options</string>
    <string name="txt_num_tables">Number of tables available</string>
    <string name="lbl_start_date_and_time">Start Date</string>
    <string name="lbl_start_date">Start date</string>
    <string name="lbl_end_date">End date</string>
    <string name="lbl_start_time">Start time</string>
    <string name="lbl_end_time">End time</string>
    <string name="lbl_end_date_and_time">End Date</string>
    <string name="txt_deposit_required">Deposit required</string>
    <string name="txt_turn_on_payment_details">When this is turned on, you will need to add your payment details</string>
    <string name="txt_event_info">Event Info</string>
    <string name="txt_event_details">Event details</string>
    <string name="txt_event_offer">10% Off every friday night on vodkas</string>
    <string name="txt_get_directions">Directions</string>
    <string name="txt_directions">Directions</string>
    <string name="txt_direction">Direction</string>
    <string name="txt_events">Events</string>
    <string name="txt_whatson">Events</string>
    <string name="txt_favourites">Favourites</string>
    <string name="txt_invite_friends">Invite friends</string>
    <string name="txt_special_request">Special Request</string>
    <string name="txt_add_to_calendar">Add to calendar</string>
    <string name="txt_add_special_request">Add Special Request</string>
    <string name="txt_add_request">Add Request</string>
    <string name="txt_category_name">Enter category name</string>
    <string name="txt_write_here">Write here…</string>
    <string name="txt_enter_details">Enter details</string>
    <string name="txt_write_here_optional">Write here (Optional)</string>
    <string name="txt_add_caption">Add Caption</string>
    <string name="txt_password_reset">Password reset</string>
    <string name="txt_successfully">Successfully</string>
    <string name="txt_event_added">Event added to</string>
    <string name="txt_event_add">Event added</string>
    <string name="txt_event_update">Event Updated</string>
    <string name="txt_venue_update">Venue Updated</string>
    <string name="txt_calendat_success">Calender Successfully</string>
    <string name="txt_name">Name</string>
    <string name="txt_temp_name">Barri Alex</string>
    <string name="txt_booking_number">Booking Number</string>
    <string name="txt_temp_booking_number">0027</string>
    <string name="txt_event_name">Event Name</string>
    <string name="txt_event_name_camel">Event name</string>
    <string name="txt_ticket_name">Ticket Name</string>
    <string name="txt_venue_name">Venue Name</string>
    <string name="txt_venue_name_camel">Venue name</string>
    <string name="txt_temp_event_name">Winter Lights Show</string>
    <string name="txt_venue">Venue</string>
    <string name="txt_temp_venue">Canary Dome</string>
    <string name="txt_address">Address</string>
    <string name="txt_address_details">Address Details</string>
    <string name="txt_temp_address">Canary Wharf London</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_temp_quantity">01</string>
    <string name="txt_start_date">Start Date</string>
    <string name="txt_temp_start_date">Fri, 26 Mar, 2023</string>
    <string name="txt_end_date">End Date</string>
    <string name="txt_temp_end_date">Fri, 26 Mar, 2023</string>
    <string name="txt_start_time">Start Time</string>
    <string name="txt_temp_start_time">10:00 PM</string>
    <string name="txt_end_time">End Time</string>
    <string name="txt_temp_end_time">Till Dawn</string>
    <string name="txt_view_booking_code">View Booking Code</string>
    <string name="txt_filter">Filter</string>
    <string name="txt_from">From</string>
    <string name="txt_to">To</string>
    <string name="err_from_date">Please select from date</string>
    <string name="err_to_date">Please select to date</string>
    <string name="txt_enter_post_code">Enter post code</string>
    <string name="txt_enter_address_camel">Enter address</string>
    <string name="txt_enter_name_camel">Enter Name</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_post_code">Post code</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_name_on_card">Name on Card</string>
    <string name="lbl_card_number">Card number</string>
    <string name="hint_card_number">xxxx xxxx xxxx xxxx</string>
    <string name="lbl_cvv">CVV</string>
    <string name="hint_cvv">xxxx</string>
    <string name="your_cvv_will_not_be_saved">Your CVV will not be saved</string>
    <string name="txt_apply">Apply</string>
    <string name="err_credit_card_holder_name_contain_only_alphabet">Please enter name on your card</string>
    <string name="err_credit_card_number">Please enter your card number</string>
    <string name="err_credit_card_cvv_number">Please enter card CVV number</string>
    <string name="err_address">Please enter billing address</string>
    <string name="err_post_code">Please enter correct post code</string>
    <string name="lbl_pay_now">Pay Now</string>
    <string name="txt_add_card">Add Card</string>
    <string name="txt_to_date">To date</string>
    <string name="txt_from_date">From date</string>
</resources>