<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_explore"
        android:enabled="true"
        android:icon="@drawable/bottom_explore_selector"
        android:title="@string/txt_menu_explore" />

    <item
        android:id="@+id/menu_events"
        android:enabled="true"
        android:icon="@drawable/bottom_event_selector"
        android:title="@string/txt_menu_events" />

    <item
        android:id="@+id/menu_location"
        android:enabled="true"
        android:icon="@drawable/bottom_location_selector"
        android:title="@string/txt_menu_location" />

    <item
        android:id="@+id/menu_favourites"
        android:enabled="true"
        android:icon="@drawable/bottom_favorite_selector"
        android:title="@string/txt_menu_favourites" />

    <item
        android:id="@+id/menu_settings"
        android:enabled="true"
        android:icon="@drawable/bottom_settings_selector"
        android:title="@string/txt_menu_settings" />
</menu>